--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+.navbar{
+   display: none;
+}
+
+@media(width>1160px){
+    .navbar{
+display: block;
+display: flex;
+justify-content: center;
+align-items: center;
+width: 100%;
+padding-bottom: 15px;
+    }
+}
